# firebase-realtime-database-wrapper

./: .gitignore  Cargo.toml  LICENCE  README.md  wave-mainframe-key.json
src/: auth.rs  firebase.rs  lib.rs  main.rs
