[package]
name = "firebase_realtime_database"
version = "0.1.0"
edition = "2021"
description = "A web API wrapper for the firebase realtime database"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.137"
gcp_auth = "0.7.3"